Fix auto indent

--- a/app/index.html
+++ b/app/index.html
@@ -24,43 +24,43 @@
     <![endif]-->
     <!-- Add your site or application content here -->
     <div class="pane_container" ng-controller="SearchResultsCtrl">
-        <div class="pane_main">
-          <header class="navbar-inverse navbar-secondary clearfix ng-scope">
-    <a  ng-show="currSearch.state === currSearch.NO_SEARCH" style="z-index:10000" href="https://github.com/o19s/splainer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
-              <div class="navbar-header">
-                <h3 class="navbar-brand" style="cursor: pointer" dispatch-on-click="closeEast" ng-click="search.reset()"><a style="color: inherit; text-decoration: inherit" href="#">Splainer</a></h3>
-                <small class="tiny_sub">By <a href="http://opensourceconnections.com">OpenSource Connections</a></small>
-              </div>
-              <ul class="nav navbar-nav navbar-right">
-                <li>
-                  <a ng-show="currSearch.state !==currSearch.NO_SEARCH" data-toggle="tooltip" title="Take a Tour" href="help.html" target="_blank">
-                    <span class="glyphicon glyphicon-question-sign"></span> Take a Tour
-                  </a>
-                </li>
-                <li>
-                  <a ng-show="currSearch.state !== currSearch.NO_SEARCH" dispatch-on-click="toggleEast" href="" type="button" ng-click="devSettingsSolr.sidebar = !devSettingsSolr.sidebar">
-                    <span ng-class="{true: 'glyphicon glyphicon-chevron-left', false: ''}[devSettingsSolr.sidebar]"></span>
-                    Tweak <span ng-class="{true: 'glyphicon-chevron-right', false: ''}[!devSettingsSolr.sidebar]" class="glyphicon glyphicon-chevron-right"></span>
-                  </a>
-                </li>
-              </ul>
-          </header>
-
-          <div class="container">
-            <div ng-include="'views/searchResults.html'"></div>
-            <div ng-controller="StartUrlCtrl" ng-show="currSearch.state === currSearch.NO_SEARCH" ng-include="'views/startUrl.html'"></div>
+      <div class="pane_main">
+        <header class="navbar-inverse navbar-secondary clearfix ng-scope">
+          <a  ng-show="currSearch.state === currSearch.NO_SEARCH" style="z-index:10000" href="https://github.com/o19s/splainer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+          <div class="navbar-header">
+            <h3 class="navbar-brand" style="cursor: pointer" dispatch-on-click="closeEast" ng-click="search.reset()"><a style="color: inherit; text-decoration: inherit" href="#">Splainer</a></h3>
+            <small class="tiny_sub">By <a href="http://opensourceconnections.com">OpenSource Connections</a></small>
           </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a ng-show="currSearch.state !==currSearch.NO_SEARCH" data-toggle="tooltip" title="Take a Tour" href="help.html" target="_blank">
+                <span class="glyphicon glyphicon-question-sign"></span> Take a Tour
+              </a>
+            </li>
+            <li>
+              <a ng-show="currSearch.state !== currSearch.NO_SEARCH" dispatch-on-click="toggleEast" href="" type="button" ng-click="devSettingsSolr.sidebar = !devSettingsSolr.sidebar">
+                <span ng-class="{true: 'glyphicon glyphicon-chevron-left', false: ''}[devSettingsSolr.sidebar]"></span>
+                Tweak <span ng-class="{true: 'glyphicon-chevron-right', false: ''}[!devSettingsSolr.sidebar]" class="glyphicon glyphicon-chevron-right"></span>
+              </a>
+            </li>
+          </ul>
+        </header>
 
-          <div class="footer">
-            <p style="margin: 0px">From the <a target="_blank" href="http://opensourceconnections.com"><img class="osc_logo" alt="OSC Logo" src="images/OSC-logomark-color-sm.png"></img></span> OpenSource Connections</a> team</p>
-            <small>Expertise, Solutions, and Consulting for Apache Solr | <a target="_blank" href="http://www.opensourceconnections.com/blog">Blog</a> | <a target="_blank" href="http://www.opensourceconnections.com/what-we-do/">Services</a> | <a href="mailto:TalkToUs@opensourceconnections.com">Contact Us</a></small>
-          </div>
+        <div class="container">
+          <div ng-include="'views/searchResults.html'"></div>
+          <div ng-controller="StartUrlCtrl" ng-show="currSearch.state === currSearch.NO_SEARCH" ng-include="'views/startUrl.html'"></div>
+        </div>
+
+        <div class="footer">
+          <p style="margin: 0px">From the <a target="_blank" href="http://opensourceconnections.com"><img class="osc_logo" alt="OSC Logo" src="images/OSC-logomark-color-sm.png"></img></span> OpenSource Connections</a> team</p>
+          <small>Expertise, Solutions, and Consulting for Apache Solr | <a target="_blank" href="http://www.opensourceconnections.com/blog">Blog</a> | <a target="_blank" href="http://www.opensourceconnections.com/what-we-do/">Services</a> | <a href="mailto:TalkToUs@opensourceconnections.com">Contact Us</a></small>
+        </div>
       </div>
       <div class="east-slider">
       </div>
       <div class="pane_east">
-          <h3>Search Controls</h3>
-          <form class="form-horizontal" style="height: 100%; min-height: 100%" id="queryParams" role="form" ng-controller="SettingsCtrl" ng-submit="publishSearcher()">
+        <h3>Search Controls</h3>
+        <form class="form-horizontal" style="height: 100%; min-height: 100%" id="queryParams" role="form" ng-controller="SettingsCtrl" ng-submit="publishSearcher()">
             <div class="dev-header" ng-click="devSettingsSearchEngine.toggle = !devSettingsSearchEngine.toggle">
               Search Engine <span ng-class="{true: 'glyphicon-plus-sign', false: 'glyphicon-minus-sign'}[!devSettingsSearchEngine.toggle]" class="glyphicon"></span>
             </div>
@@ -101,6 +101,8 @@
                 <div class="es-query-params" ui-ace="{
                     require: ['ace/ext/language_tools'],
                     useWrapMode: true,
+                    useSoftTabs: true,
+                    onLoad: aceSettings,
                     mode: 'json'
                   }" id="es-query-params-editor"
                   ng-model="workingSettings.searchArgsStr">
