trying to grok docker builds on circleci 2 (#44)
* trying to grok docker builds on circleci 2

* get right env variable

* get right env variable

* push only on master

* push only on master

* test push works on branch

* try and fix taagging

* alternative approach

* retrigger

* avoid login warning

* ugh

* build on all commits, deploy docker only on master

* build on all commits, deploy docker only on master

* trying to get splainer HTML/JS app out of docker to deploy to s3...;

* trying to get splainer HTML/JS app out of docker to deploy to s3...;

* trying to get splainer HTML/JS app out of docker to deploy to s3...;

* first cut of pushing aws s3 for deploy

* add aws cli to build

* add aws cli to build

* add aws cli to build

* add aws cli to build

* okay, that didnt work;

* what, I need an orb?  why are we changing everything..  sigh

* adding orb just meant more yaml

* final full lifecycle test to splainer.io

* okay, only deploy on merges to master

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
 
         <div class="footer">
           <p style="margin: 0px">From the <a target="_blank" href="http://opensourceconnections.com"><img class="osc_logo" alt="OSC Logo" src="images/OSC-logomark-color-sm.png"></img></span> OpenSource Connections</a> team</p>
-          <small>Expertise, Solutions, and Consulting for Apache Solr | <a target="_blank" href="http://www.opensourceconnections.com/blog">Blog</a> | <a target="_blank" href="http://www.opensourceconnections.com/what-we-do/">Services</a> | <a href="mailto:TalkToUs@opensourceconnections.com">Contact Us</a></small>
+          <small>Our mission is to empower great search teams | <a target="_blank" href="http://www.opensourceconnections.com/blog">Blog</a> | <a target="_blank" href="http://www.opensourceconnections.com/what-we-do/">Services</a> | <a href="mailto:hello@opensourceconnections.com">Contact Us</a></small>
         </div>
       </div>
       <div class="east-slider">
