--- a/app/help.html
+++ b/app/help.html
@@ -1,113 +1,105 @@
 <html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- build:css(app) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/ng-json-explorer/src/gd-ui-jsonexplorer.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/panes.css" />
-    <link rel="stylesheet" href="styles/stackedChart.css" />
-    <!-- endbuild -->
-  </head>
-  <body>
-    <div class="pane_container">
-        <div class="pane_main">
+<head>
+  <meta charset="utf-8">
 
-          <header class="navbar-inverse navbar-secondary clearfix ng-scope">
-            <div class="container">
-              <div class="navbar-header">
-                <h3 class="navbar-brand"><a href="/" class="navbar-brand">Splainer</a></h3>
-                <small class="tiny_sub">By <a href="http://opensourceconnections.com">OpenSource Connections</a></small>
-              </div>
-            </div>
-          </header>
+  <title>Splainer | Help</title>
 
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+
+  <!-- build:css(app) styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="node_modules/ng-json-explorer/dist/angular-json-explorer.css" />
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/panes.css" />
+  <link rel="stylesheet" href="styles/stackedChart.css" />
+  <!-- endbuild -->
+</head>
+
+<body>
+  <div class="pane_container">
+      <div class="pane_main">
+        <header class="navbar-inverse navbar-secondary clearfix ng-scope">
           <div class="container">
-            <div class="row">
-
-
-
-              <h3 class="col-md-12">Paste in a Solr query to get started:</h3>
-              <p class="col-md-12">Start working with Splainer by pasting in a Solr URL on the main page!</p>
-              <div class="col-md-12">
-                <img style="border: 2px solid; border-color: #A0A0A1; margin: 20px" src="docs/start_url.png"></img>
-              </div>
-
-
-
-              <h3 class="col-md-12">Tweak settings and query:</h3>
-              <p class="col-md-12" style="margin-bottom: 60px">Get to work! Alter settings and tweak your search query</p>
-              <div class="col-md-2"></div>
-              <div class="col-md-4" style="text-align:right">
-                <h4 style="margin-top: 89px">Solr URL</h4>
-                <p>URL to your Solr request handler<br/> For example, http://localhost:8983/solr/collection1/select</p>
-                <h4 style="margin-top: 40px">Displayed Fields</h4>
-                <p>The equivelant of Solr's fl<br/> Specify which parameters to show in the displayed results. Change the default id field by specifying id:alternate_id</p>
-                <h4 style="margin-top: 30px">Search Args</h4>
-                <p>Search parameters used to query Solr<br/> What you'd normally place in the URL to tweak search results</p>
-              </div>
-              <div class="col-md-3">
-                <img src="docs/search_controls.png"></img>
-              </div>
-              <div class="col-md-3"></div>
-
-
-
-              <h3 class="col-md-12" style="margin-top: 40px">Explore Your Search Results</h3>
-              <p class="col-md-12">Understand search scoring at a glance!</p>
-
-              <div class="col-md-4" style="margin-top: 0px; padding-top: 0px">
-                <div style="margin-left:60px">
-                  <h4>Matches</h4>
-                  Which field matches mattered most?<br/> Click "detailed" to view a summary of the scoring explain information.
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div style="margin-left:60px">
-                  <h4>Documents</h4>
-                  Highlighted matches in your content<br/>
-                  This column highlights matches within your content (if highlighting available)
-                </div>
-              </div>
-              <div class="col-md-1"></div>
-              <div class="col-md-12">
-                <img style="border: 2px solid; border-color: #A0A0A1; margin: 20px;" src="docs/search_results.png"></img>
-              </div>
-
-              <h3 class="col-md-12">Contact Us For Help!</h3>
-              <div class="col-md-12">Stuck? Found a bug? <a href="mailto:dturnbull@opensourceconnections.com">Contact Us</a> or visit the <a href="http://github.com/o19s/splainer">Github Project</a></div>
+            <div class="navbar-header">
+              <h3 class="navbar-brand"><a href="/" class="navbar-brand">Splainer</a></h3>
+              <small class="tiny_sub">By <a href="http://opensourceconnections.com">OpenSource Connections</a></small>
             </div>
           </div>
+        </header>
 
+        <div class="container">
+          <div class="row">
+            <h3 class="col-md-12">Paste in a Solr query to get started:</h3>
+            <p class="col-md-12">Start working with Splainer by pasting in a Solr URL on the main page!</p>
+            <div class="col-md-12">
+              <img style="border: 2px solid; border-color: #A0A0A1; margin: 20px" src="docs/start_url.png"></img>
+            </div>
 
+            <h3 class="col-md-12">Tweak settings and query:</h3>
+            <p class="col-md-12" style="margin-bottom: 60px">Get to work! Alter settings and tweak your search query</p>
+            <div class="col-md-2"></div>
+            <div class="col-md-4" style="text-align:right">
+              <h4 style="margin-top: 89px">Solr URL</h4>
+              <p>URL to your Solr request handler<br/> For example, http://localhost:8983/solr/collection1/select</p>
+              <h4 style="margin-top: 40px">Displayed Fields</h4>
+              <p>The equivelant of Solr's fl<br/> Specify which parameters to show in the displayed results. Change the default id field by specifying id:alternate_id</p>
+              <h4 style="margin-top: 30px">Search Args</h4>
+              <p>Search parameters used to query Solr<br/> What you'd normally place in the URL to tweak search results</p>
+            </div>
+            <div class="col-md-3">
+              <img src="docs/search_controls.png"></img>
+            </div>
+            <div class="col-md-3"></div>
 
-          <div class="footer" style="margin-bottom:10px; margin-top: 30px">
-            <p style="margin: 0px">From the <a target="_blank" href="http://opensourceconnections.com"><img class="osc_logo" alt="OSC Logo" src="images/OSC-logomark-color-sm.png"></img></span> OpenSource Connections</a> team</p>
-            <small>Our mission is to empower great search teams | <a target="_blank" href="http://www.opensourceconnections.com/blog">Blog</a> | <a target="_blank" href="http://www.opensourceconnections.com/what-we-do/">Services</a> | <a href="mailto:hello@opensourceconnections.com">Contact Us</a></small>
+            <h3 class="col-md-12" style="margin-top: 40px">Explore Your Search Results</h3>
+            <p class="col-md-12">Understand search scoring at a glance!</p>
+
+            <div class="col-md-4" style="margin-top: 0px; padding-top: 0px">
+              <div style="margin-left:60px">
+                <h4>Matches</h4>
+                Which field matches mattered most?<br/> Click "detailed" to view a summary of the scoring explain information.
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div style="margin-left:60px">
+                <h4>Documents</h4>
+                Highlighted matches in your content<br/>
+                This column highlights matches within your content (if highlighting available)
+              </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-12">
+              <img style="border: 2px solid; border-color: #A0A0A1; margin: 20px;" src="docs/search_results.png"></img>
+            </div>
+
+            <h3 class="col-md-12">Contact Us For Help!</h3>
+            <div class="col-md-12">Stuck? Found a bug? <a href="mailto:dturnbull@opensourceconnections.com">Contact Us</a> or visit the <a href="http://github.com/o19s/splainer">Github Project</a></div>
           </div>
         </div>
 
-    </div>
+        <div class="footer" style="margin-bottom:10px; margin-top: 30px">
+          <p style="margin: 0px">From the <a target="_blank" href="http://opensourceconnections.com"><img class="osc_logo" alt="OSC Logo" src="images/OSC-logomark-color-sm.png"></img></span> OpenSource Connections</a> team</p>
+          <small>Our mission is to empower great search teams | <a target="_blank" href="http://www.opensourceconnections.com/blog">Blog</a> | <a target="_blank" href="http://www.opensourceconnections.com/what-we-do/">Services</a> | <a href="mailto:hello@opensourceconnections.com">Contact Us</a></small>
+        </div>
+      </div>
+  </div>
 
-    <!-- Google Analytics:-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!-- Google Analytics:-->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-51758301-2', 'auto');
-      ga('send', 'pageview');
+    ga('create', 'UA-51758301-2', 'auto');
+    ga('send', 'pageview');
 
-    </script>
-
-
-  </body>
+  </script>
+</body>
 </html>
