testing the deploy process

--- a/app/help.html
+++ b/app/help.html
@@ -79,7 +79,8 @@
             </div>
 
             <h3 class="col-md-12">Contact Us For Help!</h3>
-            <div class="col-md-12">Stuck? Found a bug? <a href="mailto:dturnbull@opensourceconnections.com">Contact Us</a> or visit the <a href="http://github.com/o19s/splainer">Github Project</a></div>
+            <div class="col-md-12">Stuck? Found a bug? <a href="mailto:hello@opensourceconnections.com">Contact Us</a> or visit the <a href="http://github.com/o19s/splainer">Github Project</a>.
+              Join the Relevancy Slack at <a href="http://www.opensourceconnections.com/slack">www.opensourceconnections.com/slack</a> to chat with other Relevancy Engineers!</div>
           </div>
         </div>
 
