text updates to move Elasticsearch as a first class project

--- a/app/help.html
+++ b/app/help.html
@@ -35,7 +35,7 @@
 
         <div class="container">
           <div class="row">
-            <h3 class="col-md-12">Paste in a Solr query to get started:</h3>
+            <h3 class="col-md-12">Paste in a search query to get started (Solr example below):</h3>
             <p class="col-md-12">Start working with Splainer by pasting in a Solr URL on the main page!</p>
             <div class="col-md-12">
               <img style="border: 2px solid; border-color: #A0A0A1; margin: 20px" src="docs/start_url.png"></img>
