Removed 'Beta' label for Elasticsearch (#62)

--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
                 </label>
                 <label>
                   <input type="radio" value="es" ng-model="workingWhichEngine">
-                  Elasticsearch <span class="label label-warning">Beta</span>
+                  Elasticsearch
                 </label>
             </div>
 
